# search-mesh

./: .mcp.json  Cargo.toml  README.md  justfile  release-plz.toml
.claude-plugin/: marketplace.json  plugin.json
.github/workflows/: release-binaries.yml  release-plz.yml  review.yml
crates/search-mesh-core/: CHANGELOG.md  Cargo.toml
crates/search-mesh-core/src/: lib.rs  patch.rs  probe.rs  scan.rs
crates/search-mesh-mcp/: CHANGELOG.md  Cargo.toml
crates/search-mesh-mcp/src/: lib.rs  main.rs
docs/: architecture.md  mcp-protocol.md  roadmap.md  usage.md
examples/: ast-probe-request.jsonl  initialize-request.jsonl  patch-request.jsonl  scan-request.jsonl  squeeze-request.jsonl
scripts/: search-mesh-mcp-launcher.sh
skill/search-mesh/: SKILL.md
