[package]
name = "search-mesh-core"
version = "0.1.0"
description = "Core scanning, tree-sitter AST probing, context squeezing, and patch primitives for Search-Mesh."
edition.workspace = true
license.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
aho-corasick = "1.1.4"
ignore = "0.4.27"
thiserror = "1"
tree-sitter = "0.26.10"
tree-sitter-javascript = "0.25.0"
tree-sitter-python = "0.25.0"
tree-sitter-rust = "0.24.2"
tree-sitter-typescript = "0.23.2"
tree-sitter-svelte-ng = "1.0.2"

[dev-dependencies]
tempfile = "3.27.0"
