[package]
name = "search-mesh-mcp"
version = "0.1.2"
description = "MCP JSON-RPC stdio server exposing Search-Mesh's scan, ast_probe, squeeze, and patch tools."
edition.workspace = true
license.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
search-mesh-core = { path = "../search-mesh-core", version = "0.1.0" }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
thiserror = "1"

[dev-dependencies]
tempfile = "3.27.0"
